--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -26,6 +26,7 @@
 <li><a href="mitiv/linalg/ArrayOps.html" title="class in mitiv.linalg" target="classFrame">ArrayOps</a></li>
 <li><a href="mitiv/array/ArrayUtils.html" title="class in mitiv.array" target="classFrame">ArrayUtils</a></li>
 <li><a href="mitiv/base/BaseUtils.html" title="class in mitiv.base" target="classFrame">BaseUtils</a></li>
+<li><a href="mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy" target="classFrame">BiPhotonModel</a></li>
 <li><a href="mitiv/optim/BLMVM.html" title="class in mitiv.optim" target="classFrame">BLMVM</a></li>
 <li><a href="mitiv/base/indexing/BoundaryConditions.html" title="enum in mitiv.base.indexing" target="classFrame">BoundaryConditions</a></li>
 <li><a href="mitiv/optim/BoundProjector.html" title="class in mitiv.optim" target="classFrame">BoundProjector</a></li>
@@ -211,7 +212,6 @@
 <li><a href="mitiv/utils/MathUtils.html" title="class in mitiv.utils" target="classFrame">MathUtils</a></li>
 <li><a href="mitiv/io/MdaFormat.html" title="class in mitiv.io" target="classFrame">MdaFormat</a></li>
 <li><a href="mitiv/random/MersenneTwisterGenerator.html" title="class in mitiv.random" target="classFrame">MersenneTwisterGenerator</a></li>
-<li><a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy" target="classFrame">MicroscopyModelPSF1D</a></li>
 <li><a href="mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests" target="classFrame">MinPack1Tests</a></li>
 <li><a href="mitiv/utils/mitivCLI.html" title="class in mitiv.utils" target="classFrame">mitivCLI</a></li>
 <li><a href="mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim" target="classFrame">MoreThuenteLineSearch</a></li>
@@ -400,7 +400,8 @@
 <li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionFloat3D</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg" target="classFrame">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv" target="classFrame">WeightingOperator</a></li>
-<li><a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy" target="classFrame">Zernike1D</a></li>
+<li><a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy" target="classFrame">WideFieldModel</a></li>
+<li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy" target="classFrame">Zernike</a></li>
 </ul>
 </div>
 </body>
