--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -26,6 +26,7 @@
 <li><a href="mitiv/linalg/ArrayOps.html" title="class in mitiv.linalg">ArrayOps</a></li>
 <li><a href="mitiv/array/ArrayUtils.html" title="class in mitiv.array">ArrayUtils</a></li>
 <li><a href="mitiv/base/BaseUtils.html" title="class in mitiv.base">BaseUtils</a></li>
+<li><a href="mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy">BiPhotonModel</a></li>
 <li><a href="mitiv/optim/BLMVM.html" title="class in mitiv.optim">BLMVM</a></li>
 <li><a href="mitiv/base/indexing/BoundaryConditions.html" title="enum in mitiv.base.indexing">BoundaryConditions</a></li>
 <li><a href="mitiv/optim/BoundProjector.html" title="class in mitiv.optim">BoundProjector</a></li>
@@ -211,7 +212,6 @@
 <li><a href="mitiv/utils/MathUtils.html" title="class in mitiv.utils">MathUtils</a></li>
 <li><a href="mitiv/io/MdaFormat.html" title="class in mitiv.io">MdaFormat</a></li>
 <li><a href="mitiv/random/MersenneTwisterGenerator.html" title="class in mitiv.random">MersenneTwisterGenerator</a></li>
-<li><a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></li>
 <li><a href="mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests">MinPack1Tests</a></li>
 <li><a href="mitiv/utils/mitivCLI.html" title="class in mitiv.utils">mitivCLI</a></li>
 <li><a href="mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim">MoreThuenteLineSearch</a></li>
@@ -400,7 +400,8 @@
 <li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat3D</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></li>
-<li><a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy">Zernike1D</a></li>
+<li><a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a></li>
+<li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy">Zernike</a></li>
 </ul>
 </div>
 </body>
