--- a/overview-tree.html
+++ b/overview-tree.html
@@ -511,6 +511,7 @@
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/ArrayOps.html" title="class in mitiv.linalg"><span class="strong">ArrayOps</span></a></li>
 <li type="circle">mitiv.array.<a href="mitiv/array/ArrayUtils.html" title="class in mitiv.array"><span class="strong">ArrayUtils</span></a></li>
 <li type="circle">mitiv.base.<a href="mitiv/base/BaseUtils.html" title="class in mitiv.base"><span class="strong">BaseUtils</span></a> (implements mitiv.base.<a href="mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)</li>
+<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy"><span class="strong">BiPhotonModel</span></a></li>
 <li type="circle">mitiv.io.<a href="mitiv/io/BufferedImageUtils.html" title="class in mitiv.io"><span class="strong">BufferedImageUtils</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/ColorMap.html" title="class in mitiv.utils"><span class="strong">ColorMap</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/CommonUtils.html" title="class in mitiv.utils"><span class="strong">CommonUtils</span></a></li>
@@ -607,7 +608,6 @@
 </li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/MathUtils.html" title="class in mitiv.utils"><span class="strong">MathUtils</span></a></li>
 <li type="circle">mitiv.io.<a href="mitiv/io/MdaFormat.html" title="class in mitiv.io"><span class="strong">MdaFormat</span></a></li>
-<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">MicroscopyModelPSF1D</span></a></li>
 <li type="circle">mitiv.tests.<a href="mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests"><span class="strong">MinPack1Tests</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/mitivCLI.html" title="class in mitiv.utils"><span class="strong">mitivCLI</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/NavigableImagePanel.ZoomDevice.html" title="class in mitiv.utils"><span class="strong">NavigableImagePanel.ZoomDevice</span></a></li>
@@ -727,7 +727,8 @@
 </ul>
 </li>
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg"><span class="strong">WeightGenerator</span></a></li>
-<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">Zernike1D</span></a></li>
+<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">WideFieldModel</span></a></li>
+<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">Zernike</span></a></li>
 </ul>
 </li>
 </ul>
